Project2-milliseconds-converter/millisecond-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloudformaion template for milliseconds converter application
  This app runs on application load balancer

Resources:
  ALBSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for ALB
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  WebServersSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for App only from ALB
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerLT:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateData:
        ImageId: ami-02354e95b39ca8dec
        InstanceType: t2.micro
        KeyName: adem35
        SecurityGroupIds:
          - !GetAtt WebServersSecurityGroup.GroupId
        TagSpecifications:
          - ResourceType: instance
            Tags:
              - Key: Name
                Value: !Sub Web Server of ${AWS::StackName} Stack
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            yum update -y
            yum install python3 -y
            pip3 install flask
            mkdir templates
            cd templates
            wget https://raw.githubusercontent.com/AdamTekin/clarusway-aws-workshop/master/002-milliseconds-converter/templates/index.html
            wget https://raw.githubusercontent.com/AdamTekin/clarusway-aws-workshop/master/002-milliseconds-converter/templates/result.html
            cd ..
            wget https://raw.githubusercontent.com/AdamTekin/clarusway-aws-workshop/master/002-milliseconds-converter/millisecond-converter.py
            python3 millisecond-converter.py
  WebServersTG:
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Port: 80
      Protocol: HTTP
      TargetType: instance
      VpcId: !GetAtt WebServersSecurityGroup.VpcId
  ApplicationLoadBalancer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt ALBSecurityGroup.GroupId
      Subnets:
        - subnet-2409f47b
        - subnet-2c8a7a4a
        - subnet-667efe2b
        - subnet-a1aaae9f
        - subnet-d761cbd9
        - subnet-e556a9c4
      Type: application
  ALBListener:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - TargetGroupArn: !Ref WebServersTG
          Type: forward
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
  WebServerASG:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    Properties:
      AvailabilityZones: !GetAZs ""
      DesiredCapacity: 2
      HealthCheckGracePeriod: 90
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !Ref WebServerLT
        Version: !GetAtt WebServerLT.LatestVersionNumber
      MaxSize: 3
      MinSize: 1
      TargetGroupARNs:
        - !Ref WebServersTG
Outputs:
  WebsiteURL:
    Description: Millisecond Converter Application Load Balancer URL
    Value: !Sub
      - http://${ALBaddress}
      - ALBaddress: !GetAtt ApplicationLoadBalancer.DNSName
